--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "xstream-vr",
+  "name": "xstream-xr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aframe": "^1.0.4",
+    "aframe-particle-system-component": "^1.1.3",
+    "aframe-react": "^4.4.0",
+    "antd": "^4.6.5",
+    "firebase": "^7.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
