--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.6.5",
     "firebase": "^7.21.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-reveal": "^1.2.2",
