--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-firebaseui": "^4.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-speech-recognition": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
